--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <div class="col-lg-12">
               <div class="portfolio-title">
                 <h2 class="wow animate__animated animate__fadeInDown">
-                  پوتفولیو
+                  پورتفولیو
                 </h2>
                 <p
                   class="wow animate__animated animate__fadeInUp animate__delay-1s"
